# cargo-hell

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
demo-stm32h7-nucleo/: Cargo.toml  build.rs
demo-stm32h7-nucleo/src/: main.rs
src/: main.rs
